<resources>
    <string name="app_name">BasicViews</string>
    <string name="input_password">Input Password</string>
    <string name="input_username">Input Username</string>
    <string name="input_email">Input Email</string>
    <string name="input_day">Day</string>
    <string name="input_month">Month</string>
    <string name="input_year">Year</string>
    <string name="checkbox">Accept Conditions</string>
    <string name="register_button">Register</string>
    <string name="close_button">Close</string>
    <string name="clear_button">Clear</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="show_password_button">Show Password</string>
    <string name="hide_password_button">Hide Password</string>
    <string name="toggle_button_on_text">Close</string>
    <string name="toggle_button_off_text">Open</string>
</resources>